@@ -27,6 +27,7 @@
 	(PokerRendererTests.test26_handleHandsReplayHand): Wrote test.
 	(PokerRendererTests.test25_handleHandsOutOfState): Wrote test.
 	(PokerRendererTests.test27_rotateTableWithTwo): Wrote method.
+	(PokerRendererTests.test28_sendPacketCoverage): Wrote test.
 
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
 	error message for bad outfit should print outfits, not urls.
